<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_tags"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Artist tags -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_tags_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimenS"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Default.Text.Support"
            android:id="@+id/layout_tags_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenS"
            android:text="@string/posts_search_tags_artist"
            android:textColor="@color/tags_artist" />

        <HorizontalScrollView
            android:id="@+id/layout_tags_artist_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/layout_tags_artist_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/dimenS"
                app:singleLine="true" />

        </HorizontalScrollView>

    </LinearLayout>

    <!-- Character tags -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_tags_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimenS"
        app:layout_constraintTop_toBottomOf="@id/layout_tags_artist">

        <TextView
            style="@style/Default.Text.Support"
            android:id="@+id/layout_tags_character_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts_search_tags_character"
            android:textColor="@color/tags_character"
            android:layout_marginStart="@dimen/dimenS" />

        <HorizontalScrollView
            android:id="@+id/layout_tags_character_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/layout_tags_character_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/dimenS"
                app:singleLine="true" />

        </HorizontalScrollView>

    </LinearLayout>

    <!-- Metadata tags -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_tags_metadata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimenS"
        app:layout_constraintTop_toBottomOf="@id/layout_tags_character">

        <TextView
            style="@style/Default.Text.Support"
            android:id="@+id/layout_tags_metadata_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts_search_tags_metadata"
            android:textColor="@color/tags_metadata"
            android:layout_marginStart="@dimen/dimenS" />

        <HorizontalScrollView
            android:id="@+id/layout_tags_metadata_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/layout_tags_metadata_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/dimenS"
                app:singleLine="true" />

        </HorizontalScrollView>

    </LinearLayout>

    <!-- Copyright tags -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_tags_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimenS"
        app:layout_constraintTop_toBottomOf="@id/layout_tags_metadata">

        <TextView
            style="@style/Default.Text.Support"
            android:id="@+id/layout_tags_copyright_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts_search_tags_copyright"
            android:textColor="@color/tags_copyright"
            android:layout_marginStart="@dimen/dimenS" />

        <HorizontalScrollView
            android:id="@+id/layout_tags_copyright_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/layout_tags_copyright_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/dimenS"
                app:singleLine="true" />

        </HorizontalScrollView>

    </LinearLayout>

    <!-- General tags -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_tags_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimenS"
        android:layout_marginHorizontal="@dimen/dimenS"
        app:layout_constraintTop_toBottomOf="@id/layout_tags_copyright">

        <TextView
            style="@style/Default.Text.Support"
            android:id="@+id/layout_tags_general_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts_search_tags_general"
            android:textColor="@color/tags_general" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/layout_tags_general_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>